--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starbucks</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
     <section>
         <div class="circle"></div>
         <header>
-            <a href="https://www.starbucks.com/"><img src="../Images/logo1.png" class="logo"></a>
+            <a href="https://www.starbucks.com/"><img src="./Images/logo1.png" class="logo"></a>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">More</a></li>
@@ -32,25 +32,25 @@
             </div>
 
             <div class="imageBox">
-                <img src="../Images/img1.png" class="starbucks">
+                <img src="./Images/img1.png" class="starbucks">
             </div>
 
         </div>
         <ul class="thumb">
-            <li><img src="../Images/thumb1.png"
-                    onclick="imagSlider('../Images/img1.png'); changeCircleColor('#017143'); logochange('../Images/logo1.png')">
+            <li><img src="./Images/thumb1.png"
+                    onclick="imagSlider('./Images/img1.png'); changeCircleColor('#017143'); logochange('./Images/logo1.png')">
             </li>
-            <li><img src="../Images/thumb2.png"
-                    onclick="imagSlider('../Images/img2.png'); changeCircleColor('#eb7495'); logochange('../Images/logo2.png')">
+            <li><img src="./Images/thumb2.png"
+                    onclick="imagSlider('./Images/img2.png'); changeCircleColor('#eb7495'); logochange('./Images/logo2.png')">
             </li>
-            <li><img src="../Images/thumb3.png"
-                    onclick="imagSlider('../Images/img3.png'); changeCircleColor('#d752b1'); logochange('../Images/logo3.png')">
+            <li><img src="./Images/thumb3.png"
+                    onclick="imagSlider('./Images/img3.png'); changeCircleColor('#d752b1'); logochange('./Images/logo3.png')">
             </li>
         </ul>
         <ul class="sci">
-            <li><a href="#"><img src="../Images/facebook.png"></a></li>
-            <li><a href="#"><img src="../Images/twitter.png"></a></li>
-            <li><a href="https://www.instagram.com/?next=%2F&hl=en"><img src="../Images/instagram.png"></a></li>
+            <li><a href="#"><img src="./Images/facebook.png"></a></li>
+            <li><a href="#"><img src="./Images/twitter.png"></a></li>
+            <li><a href="https://www.instagram.com/?next=%2F&hl=en"><img src="./Images/instagram.png"></a></li>
         </ul>
     </section>
 </body>
