--- a/index.html
+++ b/index.html
@@ -15,20 +15,18 @@
         <header>
             <a href="https://www.starbucks.com/"><img src="./Images/logo1.png" class="logo"></a>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">More</a></li>
-                <li><a href="#">Whats's New</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="https://www.starbucks.in/dashboard">Home</a></li>
+                <li><a href="https://www.starbucks.in/ordering">More</a></li>
+                <li><a href="https://www.starbucks.in/giftcards">Whats's New</a></li>
+                <li><a href="https://www.starbucks.in/profile/help-center">Contact</a></li>
             </ul>
         </header>
         <div class="content">
 
             <div class="textBox">
                 <h2>It's not just Coffe <br>It's <span class="spancolor">Starsbucks</span></h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti ut necessitatibus minus
-                    architecto. Reprehenderit veniam numquam alias expedita nisi, voluptatum eveniet iste iusto ipsam
-                    eligendi voluptatibus similique officiis quisquam beatae!</p>
-                <a href="#" class="learnmore">Learn more</a>
+                <p>Today, with more than 32,000 stores in 80 countries, Starbucks is the premier roaster and retailer of specialty coffee in the world. And with every cup, we strive to bring both our heritage and an exceptional experience to life.</p>
+                <a href="https://www.starbucks.in/dashboard" class="learnmore">Learn more</a>
             </div>
 
             <div class="imageBox">
